# numC-CPU

./: CMakeLists.txt  ReadMe.md  main.cpp
include/numC/: customKernels.hpp  npArrayCpu.hpp  npFunctions.hpp  npRandom.hpp
openblas/include/: openblas_config.h
openblas/lib/: libopenblas.lib
